// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MenuList should match snapshot when Menu is closed 1`] = `
<div
  className="jsx-2435928121 jsx-2330443265"
>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
    onClick={[Function]}
  >
    Home
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
    onClick={[Function]}
  >
    Browse
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
    onClick={[Function]}
  >
    Login
  </button>
</div>
`;

exports[`components/MenuList should match snapshot when Menu is open 1`] = `
<div
  className="jsx-2435928121 jsx-410418109"
>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
    onClick={[Function]}
  >
    Home
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
    onClick={[Function]}
  >
    Browse
  </button>
  <button
    className="jsx-67710159 jsx-4255320455 "
    disabled={false}
    onClick={[Function]}
  >
    Login
  </button>
</div>
`;
